--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>5IUX搜索</title>
-    <link rel="apple-touch-icon-precomposed" href="280.png" />
-    <meta name="msapplication-TileImage" content="280.png" />
-    <link rel="shortcut icon" href="32.png" />
+    <title>miiiku search</title>
+    <link rel="apple-touch-icon-precomposed" href="https://pic.miiiku.com/file/imiiiku/1752067013313_042b5382982a778b31f20687b2332a68-1.png" />
+    <meta name="msapplication-TileImage" content="https://pic.miiiku.com/file/imiiiku/1752067013313_042b5382982a778b31f20687b2332a68-1.png" />
+    <link rel="shortcut icon" href="https://pic.miiiku.com/file/imiiiku/1752067013313_042b5382982a778b31f20687b2332a68-1.png" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -30,12 +30,12 @@
 <body>
     <!--视频头部背景-->
     <div class="banner-video">
-        <!--视频来自阿里云首页，有需要请自行更换-->
-        <video autoplay loop muted>
-            <source src="https://cdn.jsdelivr.net/gh/5iux/uploads/pic/3840-banner.mp4" type="video/mp4">
-        </video>
+#        <!--视频来自阿里云首页，有需要请自行更换-->
+#        <video autoplay loop muted>
+#            <source src="https://cdn.jsdelivr.net/gh/5iux/uploads/pic/3840-banner.mp4" type="video/mp4">
+#        </video>
         <!--注释掉视频可换成图片版本-->
-        <!--img src="https://cn.bing.com//th?id=OHR.HuntsMesa_JA-JP3140979616_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp" alt=""-->
+        <img src="https://miiiku.com/imiiiku/1.jpg" alt="">
         <div class="bottom-cover" style="background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgb(244 248 251 / 0.6) 50%, rgb(244 248 251) 100%);"></div>
     </div>
     <!--topbar开始-->
@@ -75,22 +75,22 @@
         <div class="collapse navbar-collapse" id="navbarsExample05">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="https://blog.5iux.cn" target="_blant">博客</a>
+                    <a class="nav-link" href="https://miiiku.com/" target="_blant">博客</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://dyartstyle.com" target="_blant">DY点线面</a>
+                    <a class="nav-link" href="https://pic.miiiku.com/" target="_blant">图床</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://hao.5iux.cn/" target="_blant">设计导航</a>
+                    <a class="nav-link" href="https://link.miiiku.com/" target="_blant">链接树</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://wat.dyartstyle.com" target="_blant">吾爱淘</a>
+                    <a class="nav-link" href="https://code.miiiku.com" target="_blant">链接缩短</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/5iux/5iux.github.io" target="_blant">Github</a>
+                    <a class="nav-link" href="https://i.miiiku.com/" target="_blant">云盘</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://blog.5iux.cn/about" target="_blant">About</a>
+                    <a class="nav-link" href="https://link.miiiku.com/" target="_blant">About</a>
                 </li>
             </ul>
             <style>
@@ -416,7 +416,7 @@
         </ul>
     </div>
     <!--版权信息开始-->
-    <p class="mt-5 mb-3 text-muted text-center">©2021 by <a href="https://blog.5iux.cn/">5iux</a>. All rights reserved.</p>
+    <p class="mt-5 mb-3 text-muted text-center">BUILT WITH ❤ <a href="https://miiiku.com/"> MIIIKU</a>. HOSTED ON CLOUDFLARE PAGES.</p>
     <!--
 作者:D.Young
 主页：https://blog.5iux.cn/
