--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!--source src="https://cdn.jsdelivr.net/gh/5iux/uploads/pic/3840-banner.mp4" type="video/mp4"-->
         <!--/video-->
         <!--注释掉视频可换成图片版本-->
-        <img src="https://miiiku.com/imiiiku/1.jpg" alt="">
+        <img src="https://miiiku.com/miiiku/64.jpg" alt="">
         <div class="bottom-cover" style="background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgb(244 248 251 / 0.6) 80%, rgb(244 248 251) 100%);"></div>
     </div>
     <!--topbar开始-->
