--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>miiiku search</title>
+    <title>miiiku 导航</title>
     <link rel="apple-touch-icon-precomposed" href="https://pic.miiiku.com/file/imiiiku/1752067013313_042b5382982a778b31f20687b2332a68-1.png" />
     <meta name="msapplication-TileImage" content="https://pic.miiiku.com/file/imiiiku/1752067013313_042b5382982a778b31f20687b2332a68-1.png" />
     <link rel="shortcut icon" href="https://pic.miiiku.com/file/imiiiku/1752067013313_042b5382982a778b31f20687b2332a68-1.png" />
@@ -31,12 +31,12 @@
     <!--视频头部背景-->
     <div class="banner-video">
         <!--视频来自阿里云首页，有需要请自行更换-->
-        <!--video autoplay loop muted-->
-            <!--source src="https://cdn.jsdelivr.net/gh/5iux/uploads/pic/3840-banner.mp4" type="video/mp4"-->
-        <!--/video-->
+        <video autoplay loop muted>
+            <source src="https://cdn.jsdelivr.net/gh/5iux/uploads/pic/3840-banner.mp4" type="video/mp4">
+        </video>
         <!--注释掉视频可换成图片版本-->
-        <img src="https://cn.bing.com//th?id=OHR.HuntsMesa_JA-JP3140979616_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp" alt="">
-        <div class="bottom-cover" style="background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgb(244 248 251 / 0.6) 80%, rgb(244 248 251) 100%);"></div>
+        <!--img src="https://cn.bing.com//th?id=OHR.HuntsMesa_JA-JP3140979616_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp" alt=""-->
+        <!--div class="bottom-cover" style="background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgb(244 248 251 / 0.6) 80%, rgb(244 248 251) 100%);"></div-->
     </div>
     <!--topbar开始-->
     <style>
