--- a/index.html
+++ b/index.html
@@ -37,10 +37,16 @@
         <!--/video-->
         <!--注释掉视频可换成图片版本-->
         <img src="https://cn.bing.com//th?id=OHR.HuntsMesa_JA-JP3140979616_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp" alt="">
-        <div class="bottom-cover" style="background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgb(244 248 251 / 0.6) 80%, rgb(244 248 251) 100%);width: auto;height: auto;max-width: 100%;max-height: 100%;"></div>
+        <div class="bottom-cover" style="background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgb(244 248 251 / 0.6) 80%, rgb(244 248 251) 100%);"></div>
     </div>
     <!--topbar开始-->
     <style>
+        .background-image{
+            width: auto;
+            height: auto;
+            max-width: 100%;
+            max-height: 100%;
+        }
         .navbar-toggler svg {
             width: 24px;
             height: 24px;
