--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <!--topbar开始-->
     <style>
-        .background-image{
+        .bottom-cover {
             width: auto;
             height: auto;
             max-width: 100%;
