--- a/index.html
+++ b/index.html
@@ -36,11 +36,16 @@
             <!--source src="https://cdn.jsdelivr.net/gh/5iux/uploads/pic/3840-banner.mp4" type="video/mp4"-->
         <!--/video-->
         <!--注释掉视频可换成图片版本-->
-        <img src="https://cn.bing.com//th?id=OHR.HuntsMesa_JA-JP3140979616_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp" alt="">
-        <div class="bottom-cover" style="background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgb(244 248 251 / 0.6) 80%, rgb(244 248 251) 100%);"></div>
+        <div class="bottom-cover" style="background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgb(244 248 251 / 0.6) 80%, rgb(244 248 251) 100%);">
+            <img class="bottom-covers" src="https://cn.bing.com//th?id=OHR.HuntsMesa_JA-JP3140979616_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp" alt="">
+        </div>
     </div>
     <!--topbar开始-->
     <style>
+        .bottom-covers {
+            width: 300px;
+            height: 300px;
+        }
         .bottom-cover {
             width: auto;
             height: auto;
