--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!--/video-->
         <!--注释掉视频可换成图片版本-->
         <div class="bottom-cover" style="background-image: linear-gradient(rgba(255, 255, 255, 0) 0%, rgb(244 248 251 / 0.6) 80%, rgb(244 248 251) 100%);">
-            <img class="bottom-covers" src="https://cn.bing.com//th?id=OHR.HuntsMesa_JA-JP3140979616_1920x1080.jpg&rf=LaDigue_1920x1080.jpg&pid=hp" alt="">
+            <img class="bottom-covers" src="https://miiiku.com/imiiiku/1.jpg" alt="">
         </div>
     </div>
     <!--topbar开始-->
